--- a/train/classification_walloc_maxvit.ipynb
+++ b/train/classification_walloc_maxvit.ipynb
@@ -514,6 +514,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "d72d03f6-6f6e-4b88-a8ef-12fa078d34be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.70316"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(valid_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "1ff65524-767b-4466-8782-08b6977ebdc1",
    "metadata": {},
