rate distortion metrics

--- a/RD/walloc_stereo.ipynb
+++ b/RD/walloc_stereo.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "6d7db02c-516f-4ddd-ba4a-31b7dcc18526",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3aaa8f23b3ca405b9b0666fcb64201ce",
+       "model_id": "748d0f0a9063466c80da5e89dd407bce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "446ae6f62f1d48d5a1d0bccb4198fe33",
+       "model_id": "9ef8bada835b440296dbdd9962f485fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23f0ca975ad04e2087bb463ece946f10",
+       "model_id": "324c680139364b1f96a7388e3a41a1d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af0434ae697b4bd78c32c3e4323c747b",
+       "model_id": "13c1119dd40c422aae2929e802d309fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c80f71af-4b52-4afc-8ad6-d03af3828982",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1f56389a-c617-4510-8d0b-d08b4e96ba0b",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "28e614a2-25ec-413a-b664-cb5a74a0e084",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "19a63a7e-c0a6-4bfe-846e-cd60a53a41cf",
    "metadata": {},
    "outputs": [],
@@ -413,45 +413,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "de12cf92-b07d-45b5-9612-c2fff761e79b",
    "metadata": {},
    "outputs": [],
    "source": [
     "device = \"cuda\"\n",
     "codec = codec.to(device)\n",
-    "\n",
     "sample = MUSDB[5]\n",
-    "x, fs = torchaudio.load(sample['audio']['bytes'])\n",
-    "L = x.shape[-1]\n",
-    "x_padded = pad(x.unsqueeze(0), 2**16).to(device)\n",
-    "\n",
     "with torch.no_grad():\n",
+    "    x, fs = torchaudio.load(sample['audio']['bytes'])\n",
+    "    L = x.shape[-1]\n",
+    "    x_padded = pad(x.unsqueeze(0), 2**16).to(device)\n",
+    "    t0 = time.time()\n",
     "    X = codec.wavelet_analysis(x_padded,codec.J)\n",
     "    Y = codec.encoder(X)\n",
     "    ℓ = Y.shape[-1]\n",
     "    Y = pad(Y,256)\n",
-    "    Y = rearrange(Y, 'b c (h w) -> b c h w', h=256)\n",
+    "    Y = rearrange(Y, 'b c (w h) -> b c w h', h=256).to(\"cpu\")\n",
+    "    webp = walloc.latent_to_pil(Y,codec.latent_bits,3)[0]\n",
+    "    buff = io.BytesIO()\n",
+    "    webp.save(buff, format='WEBP', lossless=True)\n",
+    "    webp_bytes = buff.getbuffer()\n",
+    "    encode_time = time.time() - t0\n",
     "\n",
-    "    Z = codec.decoder(rearrange(Y, 'b c h w -> b c (h w)')[:,:,:ℓ])\n",
-    "    z = codec.wavelet_synthesis(Z,codec.J)\n",
-    "    z = codec.post(z)\n",
-    "    z = z[:,:,:L]\n",
+    "    t0 = time.time()\n",
+    "    Y = walloc.pil_to_latent([PIL.Image.open(buff)], codec.latent_dim, codec.latent_bits, 3).to(device)\n",
+    "    X_hat = codec.decoder(rearrange(Y.to(device), 'b c h w -> b c (h w)')[:,:,:ℓ])\n",
+    "    x_hat = codec.wavelet_synthesis(X_hat,codec.J)\n",
+    "    x_hat = codec.post(x_hat)\n",
+    "    x_hat = x_hat[0,:,:L].clamp(-1., 1.)\n",
+    "    decode_time = time.time() - t0\n",
+    "\n",
+    "    bps = 8*len(webp_bytes)/(x.numel())\n",
+    "    PSNR = 20*np.log10(2) - 10*np.log10(torch.nn.functional.mse_loss(x,x_hat.to(\"cpu\")))\n",
+    "    SDR = spauq_eval(x,x_hat.to(\"cpu\"),fs=fs)\n",
+    "    SSDR = SDR['SSR']\n",
+    "    SRDR = SDR['SRR']\n",
+    "    cdpam = cdpam_loss.forward(x.to(device),x_hat).mean().item()\n",
     "    \n",
-    "x = x.to(\"cpu\")[0]\n",
-    "z = z.to(\"cpu\")[0]"
+    "# return {\n",
+    "#     'compressed': webp_bytes,\n",
+    "#     'encode_time': encode_time,\n",
+    "#     'decode_time': decode_time,\n",
+    "#     'bps': bps,\n",
+    "#     'PSNR': PSNR,\n",
+    "#     'SSDR': SSDR\n",
+    "#     'SRDR': SRDR\n",
+    "#     'CDPAM': cdpam\n",
+    "# }"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a2b08bd8-6f28-46a5-9a8f-60f6bed99aee",
+   "id": "6b2e6847-0c92-427e-8d08-2f151ead2431",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 48, 256, 122])"
+       "0.444941745567345"
       ]
      },
      "execution_count": 23,
@@ -460,23 +482,91 @@
     }
    ],
    "source": [
-    "Y.shape"
+    "bps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c7ce63a8-40ed-4e16-9f22-7ddaf29ce8e1",
+   "execution_count": 24,
+   "id": "73fefeb5-caca-45fd-88f6-ac2ed1cc9344",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(33.7881)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Y_pil = walloc.latent_to_pil(Y_padded,codec.latent_bits,3)\n",
-    "# display(scale_for_display(Y_pil[0], codec.latent_bits))\n",
-    "# Y_pil[0].save('latent.webp',lossless=True)\n",
-    "# webp = [Image.open(\"latent.webp\")]\n",
-    "# Y_rec = walloc.pil_to_latent(webp,108,codec.latent_bits,3)\n",
-    "# assert(Y_rec.equal(Y_padded))\n",
-    "# print(\"compression_ratio: \", x.numel()/os.path.getsize(\"latent.webp\"))"
+    "PSNR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "eb9a7dc1-86fe-4293-bfa5-fc7e336604ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.305854846064648"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SSDR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7ccae76d-0def-4cf3-970c-75dfdaf3dba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.542482940408304"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SRDR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2c801792-e413-446c-a127-4afbe38460eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46.069673755746024"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-10*np.log10(cdpam)"
    ]
   }
  ],
