--- a/RD/walloc_stereo.ipynb
+++ b/RD/walloc_stereo.ipynb
@@ -112,21 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "922c790479874be691698f6f27cec5e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/561 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66c6036e07ac4f878e0aecb101f2af02",
+       "model_id": "7f9bed8934994835ab989193c3b90f19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ced1f083031a45aa900ab8d54d064ef4",
+       "model_id": "a1048426749344a7b6450c9f4baf9155",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d88ed6c1fdc4863bfe60aa9a63cf1b6",
+       "model_id": "8feb3cf675d547dab6409e38cda8d4ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19cd9696056c499fadc3d5681b00b276",
+       "model_id": "6f0d762275b74cca81ee5b18bd1817a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,6 +231,7 @@
     "        'encode_time': encode_time,\n",
     "        'decode_time': decode_time,\n",
     "        'bps': bps,\n",
+    "        'L': L,\n",
     "        'PSNR': PSNR,\n",
     "        'SSDR': SSDR,\n",
     "        'SRDR': SRDR,\n",
@@ -254,19 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "07a4d392-f9b7-4d92-b656-a33ecffdf2d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d9a72d7f55243099cd14788298b403c",
+       "model_id": "7d0b2771827845f9a7b72f38741c1cda",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/3 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -276,13 +263,16 @@
    "source": [
     "device = \"cuda\"\n",
     "codec = codec.to(device)\n",
-    "gpu = MUSDB.select(range(3)).map(walloc_compress,writer_batch_size=64)\n",
+    "gpu = MUSDB.map(\n",
+    "    walloc_compress,\n",
+    "    writer_batch_size=16,\n",
+    ")\n",
     "gpu = gpu.cast_column('compressed',Image())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "8ed7b5ec-3124-470f-86b4-359c2389e9e6",
    "metadata": {},
    "outputs": [],
@@ -321,19 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "c5ddb0a9-70c7-46c4-b8bd-83aa7eb73268",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8016701c3a847b3b16545d01fb9614a",
+       "model_id": "c3a9344b100d41a3b5a6c98d1eee6a35",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/3 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -343,14 +333,14 @@
    "source": [
     "device = \"cpu\"\n",
     "codec = codec.to(device)\n",
-    "cpu = MUSDB.select(range(3)).map(walloc_compress_cpu)\n",
+    "cpu = MUSDB.map(walloc_compress_cpu, writer_batch_size=16)\n",
     "combined = gpu.add_column('cpu_encode_time',cpu['cpu_encode_time'])\n",
     "combined = combined.add_column('cpu_decode_time',cpu['cpu_decode_time'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "e77d2fd0-f5b5-45b8-a386-65db975d376f",
    "metadata": {},
    "outputs": [],
@@ -370,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "d1baaf00-9378-40ab-95d0-ef8f3e1d9245",
    "metadata": {},
    "outputs": [
@@ -378,15 +368,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "encode_time: 0.06415629386901855\n",
-      "decode_time: 0.008552789688110352\n",
-      "bps: 0.3107513227513227\n",
-      "PSNR: 35.33026250203451\n",
-      "SSDR: 29.953198800390663\n",
-      "SRDR: 10.88598954937473\n",
-      "CDPAM: 1.9955918105551973e-05\n",
-      "cpu_encode_time: 0.44541120529174805\n",
-      "cpu_decode_time: 2.322610855102539\n"
+      "encode_time: 0.05361144924163818\n",
+      "decode_time: 0.008066473007202148\n",
+      "bps: 0.2701805950207829\n",
+      "PSNR: 33.14359369659424\n",
+      "SSDR: 27.539516615683134\n",
+      "SRDR: 7.411177765554664\n",
+      "CDPAM: 0.00010840650893260318\n",
+      "cpu_encode_time: 0.37957072257995605\n",
+      "cpu_decode_time: 2.0746664352416992\n"
      ]
     }
    ],
@@ -394,6 +384,16 @@
     "for metric in metrics:\n",
     "    μ = np.mean(combined[metric])\n",
     "    print(f\"{metric}: {μ}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "598917b0-d1c4-43ab-97a3-ab46cbdd757f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined.push_to_hub(\"danjacobellis/Stereo_Li_48c_J8_nf8\",split='validation')"
    ]
   },
   {
