need to run cpu in fp32

--- a/RD/stable_audio.ipynb
+++ b/RD/stable_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d3b6a3b0-bc00-4ec5-b0b2-3dc34104bfe6",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6d7db02c-516f-4ddd-ba4a-31b7dcc18526",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f1d8daf3-5777-4f61-b570-cf77fb459585",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cfc6e03e-ffcc-443f-be69-f6f75ba737e6",
    "metadata": {},
    "outputs": [
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "eea68b9d-1e5a-432f-af4a-8ad4447fcf3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4743e2b2e60640a9a73242236290a431",
+       "model_id": "5cef43d131d648df909ea9bd45d0c383",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54aaea64464544c783d22f4f5b9ad2bc",
+       "model_id": "c7b43fe9e7b84412a65843a890f23dee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cd68cded0664160b05f03a68ad55d4c",
+       "model_id": "b74718beaadb4ad58a3a268286f6a3c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8217d269b90f48059ade00e36f9e386e",
+       "model_id": "eb906dd6ac3f4fc6a6484c24a6b86fb8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8024e4dc-ba66-4c7c-a543-642a0e45c33c",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "021b474e-b622-49da-b074-d426d754b124",
    "metadata": {},
    "outputs": [],
@@ -221,13 +221,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parameter 'function'=<function stable_audio_compress at 0x78b3299e0dc0> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n"
+      "Parameter 'function'=<function stable_audio_compress at 0x7ff5bb3c32e0> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a3cf370411b4696a7f81d3427bee9c2",
+       "model_id": "07c5ddb90b6841a2996635ebc2680bdf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,12 +271,12 @@
     "        L = x.shape[-1]\n",
     "\n",
     "        t0 = time.time()\n",
-    "        x_padded = pad(x.unsqueeze(0), 2**16).to(device).to(torch.float16)\n",
-    "        Y = codec.encode(x_padded).latent_dist.mode().to(torch.float16).to(\"cpu\")\n",
+    "        x_padded = pad(x.unsqueeze(0), 2**16).to(device).to(torch.float)\n",
+    "        Y = codec.encode(x_padded).latent_dist.mode().to(torch.float16)\n",
     "        encode_time = time.time() - t0\n",
     "    \n",
     "        t0 = time.time()\n",
-    "        x_hat = codec.decode(Y.to(torch.float16).to(device)).sample\n",
+    "        x_hat = codec.decode(Y.to(torch.float).to(device)).sample\n",
     "        x_hat = x_hat[0,:,:L].clamp(-1., 1.)\n",
     "        decode_time = time.time() - t0\n",
     "        \n",
@@ -284,6 +284,68 @@
     "        'cpu_encode_time': encode_time,\n",
     "        'cpu_decode_time': decode_time,\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e8db5a5-7c2b-4350-8192-5e4bd510616a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cpu\"\n",
+    "codec = AutoencoderOobleck.from_pretrained(\n",
+    "    \"stabilityai/stable-audio-open-1.0\",\n",
+    "    subfolder='vae',\n",
+    "    torch_dtype=torch.float\n",
+    ")\n",
+    "codec.eval();\n",
+    "codec = codec.to(device)\n",
+    "cpu = MUSDB.map(stable_audio_compress_cpu, writer_batch_size=16)\n",
+    "combined = gpu.add_column('cpu_encode_time',cpu['cpu_encode_time'])\n",
+    "combined = combined.add_column('cpu_decode_time',cpu['cpu_decode_time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f58c9ef6-d925-48a0-81e3-4d4f029f892d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = [\n",
+    "    'encode_time',\n",
+    "    'decode_time',\n",
+    "    'bps',\n",
+    "    'PSNR',\n",
+    "    'SSDR',\n",
+    "    'SRDR',\n",
+    "    'CDPAM',\n",
+    "    'cpu_encode_time',\n",
+    "    'cpu_decode_time',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a79683ca-4a61-4940-9c65-e680df7e1ca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for metric in metrics:\n",
+    "    μ = np.mean(combined[metric])\n",
+    "    print(f\"{metric}: {μ}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abe68441-e2b6-4e1c-9f21-a039b5a35e8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined.push_to_hub(\"danjacobellis/MUSDB_stable_audio_fp16\",split='validation')"
    ]
   }
  ],
