--- a/RD/stable_audio.ipynb
+++ b/RD/stable_audio.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ff8eb8f0-43f8-46bc-8418-62c9f207caa3",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8399eb6d-c35b-4cbe-88f4-1d3f1353bc45",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,22 @@
    "execution_count": null,
    "id": "9e8db5a5-7c2b-4350-8192-5e4bd510616a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fdbee76fe3dc4411a78b1e50f8685579",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "device = \"cpu\"\n",
     "codec = AutoencoderOobleck.from_pretrained(\n",
