--- a/RD/rd_table.ipynb
+++ b/RD/rd_table.ipynb
@@ -21,18 +21,26 @@
    "outputs": [],
    "source": [
     "methods = [\n",
-    "    \"danjacobellis/CompVis-stable-diffusion-v1-4_fp16\",\n",
-    "    \"danjacobellis/CompVis-stable-diffusion-v1-4_nf4\",\n",
-    "    \"danjacobellis/stabilityai-stable-diffusion-3-medium-diffusers_fp16\",\n",
-    "    \"danjacobellis/stabilityai-stable-diffusion-3-medium-diffusers_nf4\",\n",
-    "    \"danjacobellis/RGB_Li_27c_J3_nf4_v1.0.2\",\n",
+    "    \"danjacobellis/LSDIR_WEBP_q20\",\n",
+    "    \"danjacobellis/LSDIR_DGML_q6\",\n",
+    "    \"danjacobellis/LSDIR_RGB_Li_48c_J3_nf8\",\n",
+    "    \"danjacobellis/LSDIR_stable_diffusion_3_fp16\",\n",
+    "    \"danjacobellis/LSDIR_RGB_Li_12c_J3_nf8\",\n",
+    "]\n",
+    "\n",
+    "dimensionality_reduction = [\n",
+    "    1,\n",
+    "    4,\n",
+    "    4,\n",
+    "    12,\n",
+    "    16,\n",
     "]\n",
     "\n",
     "names = [\n",
-    "    'Stable Diffusion 1.4 (fp16)',\n",
-    "    'Stable Diffusion 1.4 (nf4)',\n",
-    "    'Stable Diffusion 3 (fp16)',\n",
-    "    'Stable Diffusion 3 (nf4)',\n",
+    "    'WEBP',\n",
+    "    'Cheng2020',\n",
+    "    'WaLLoC',\n",
+    "    'Stable Diffusion 3',\n",
     "    'WaLLoC',\n",
     "]"
    ]
@@ -45,8 +53,8 @@
    "outputs": [],
    "source": [
     "metrics = [\n",
-    "    'encode_time',\n",
-    "    'decode_time',\n",
+    "    'cpu_encode_time',\n",
+    "    'cpu_decode_time',\n",
     "    'bpp',\n",
     "    'PSNR',\n",
     "    'MSSIM',\n",
@@ -60,45 +68,17 @@
    "execution_count": 4,
    "id": "17273f0d-a1e7-42f4-b395-89ce55bce35f",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prepare multi-level columns for mean and median\n",
-    "col_tuples = []\n",
-    "for metric in metrics:\n",
-    "    col_tuples.append((metric, 'mean'))\n",
-    "    col_tuples.append((metric, 'median'))\n",
-    "\n",
-    "columns = pd.MultiIndex.from_tuples(col_tuples)\n",
-    "data_rows = []\n",
-    "\n",
-    "for i_method, method in enumerate(methods):\n",
-    "    ds = load_dataset(method, split='validation')\n",
-    "    row = []\n",
-    "    for metric in metrics:\n",
-    "        mean = np.mean(ds[metric])\n",
-    "        median = np.median(ds[metric])\n",
-    "        row.extend([mean, median])\n",
-    "    data_rows.append(row)\n",
-    "\n",
-    "df = pd.DataFrame(data_rows, index=names, columns=columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "2f066e91-060f-40db-87ba-369dc48183fe",
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "|                             |   ('encode_time', 'mean') |   ('encode_time', 'median') |   ('decode_time', 'mean') |   ('decode_time', 'median') |   ('bpp', 'mean') |   ('bpp', 'median') |   ('PSNR', 'mean') |   ('PSNR', 'median') |   ('MSSIM', 'mean') |   ('MSSIM', 'median') |   ('LPIPS_dB', 'mean') |   ('LPIPS_dB', 'median') |   ('DISTS_dB', 'mean') |   ('DISTS_dB', 'median') |\n",
-       "|:----------------------------|--------------------------:|----------------------------:|--------------------------:|----------------------------:|------------------:|--------------------:|-------------------:|---------------------:|--------------------:|----------------------:|-----------------------:|-------------------------:|-----------------------:|-------------------------:|\n",
-       "| Stable Diffusion 1.4 (fp16) |                     0.022 |                       0.022 |                     0.017 |                       0.017 |             1     |               1     |             19.428 |               18.982 |               0.811 |                 0.825 |                  6.679 |                    6.557 |                 12.242 |                   12.144 |\n",
-       "| Stable Diffusion 1.4 (nf4)  |                     0.176 |                       0.156 |                     0.019 |                       0.019 |             0.226 |               0.231 |             17.029 |               16.855 |               0.768 |                 0.776 |                  4.86  |                    4.786 |                  9.488 |                    9.494 |\n",
-       "| Stable Diffusion 3 (fp16)   |                     0.019 |                       0.021 |                     0.017 |                       0.017 |             4     |               4     |             20.88  |               19.879 |               0.84  |                 0.841 |                  8.325 |                    7.845 |                 13.846 |                   13.383 |\n",
-       "| Stable Diffusion 3 (nf4)    |                     0.192 |                       0.173 |                     0.02  |                       0.02  |             0.454 |               0.462 |             17.051 |               17.01  |               0.716 |                 0.727 |                  3.082 |                    3.091 |                  7.228 |                    7.259 |\n",
-       "| WaLLoC                      |                     0.066 |                       0.066 |                     0.013 |                       0.012 |             1.146 |               1.157 |             29.676 |               29.82  |               0.978 |                 0.981 |                  7.638 |                    7.683 |                 15.032 |                   15.081 |"
+       "| Name               |   Dimensionality Reduction |   cpu_encode_time |   cpu_decode_time |    bpp |    PSNR |   MSSIM |   LPIPS_dB |   DISTS_dB |\n",
+       "|:-------------------|---------------------------:|------------------:|------------------:|-------:|--------:|--------:|-----------:|-----------:|\n",
+       "| WEBP               |                          1 |            0.055  |            0.0005 | 0.5907 | 28.2272 |  0.9597 |     5.9426 |    13.1392 |\n",
+       "| Cheng2020          |                          4 |            4.6603 |            9.5279 | 1.1033 | 33.7758 |  0.9903 |     8.8248 |    16.9385 |\n",
+       "| WaLLoC             |                          4 |            0.0961 |            2.829  | 2.8132 | 33.5474 |  0.9902 |    11.2465 |    19.2875 |\n",
+       "| Stable Diffusion 3 |                         12 |            6.2625 |           11.8983 | 4      | 20.8806 |  0.8399 |     8.3253 |    13.8466 |\n",
+       "| WaLLoC             |                         16 |            0.0594 |            2.8477 | 0.682  | 27.4524 |  0.97   |     6.5131 |    13.8514 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -109,14 +89,27 @@
     }
    ],
    "source": [
-    "df_rounded = df.round(3)\n",
-    "md_table = df_rounded.to_markdown()\n",
+    "columns = ['Name', 'Dimensionality Reduction'] + metrics\n",
+    "data_rows = []\n",
+    "\n",
+    "for i_method, method in enumerate(methods):\n",
+    "    ds = load_dataset(method, split='validation')\n",
+    "    row = [names[i_method], dimensionality_reduction[i_method]]\n",
+    "    for metric in metrics:\n",
+    "        mean = np.mean(ds[metric])\n",
+    "        row.append(mean)\n",
+    "    data_rows.append(row)\n",
+    "\n",
+    "df = pd.DataFrame(data_rows, columns=columns)\n",
+    "\n",
+    "df_rounded = df.round(4)\n",
+    "md_table = df_rounded.to_markdown(index=False)\n",
     "display(Markdown(md_table))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "1d6426e8-6844-4b48-a7a2-6ff183f779be",
    "metadata": {},
    "outputs": [
@@ -126,14 +119,13 @@
      "text": [
       "\\begin{tabular}{lrrrrrrrrrrrrrr}\n",
       "\\toprule\n",
-      " & \\multicolumn{2}{c}{encode_time} & \\multicolumn{2}{c}{decode_time} & \\multicolumn{2}{c}{bpp} & \\multicolumn{2}{c}{PSNR} & \\multicolumn{2}{c}{MSSIM} & \\multicolumn{2}{c}{LPIPS_dB} & \\multicolumn{2}{c}{DISTS_dB} \\\\\n",
-      " & mean & median & mean & median & mean & median & mean & median & mean & median & mean & median & mean & median \\\\\n",
+      " & Name & Dimensionality Reduction & cpu_encode_time & cpu_decode_time & bpp & PSNR & MSSIM & LPIPS_dB & DISTS_dB \\\\\n",
       "\\midrule\n",
-      "\\textbf{Stable Diffusion 1.4 (fp16)} & 0.022 & 0.022 & 0.017 & 0.017 & 1.000 & 1.000 & 19.428 & 18.982 & 0.811 & 0.825 & 6.679 & 6.557 & 12.242 & 12.144 \\\\\n",
-      "\\textbf{Stable Diffusion 1.4 (nf4)} & 0.176 & 0.156 & 0.019 & 0.019 & 0.226 & 0.231 & 17.029 & 16.855 & 0.768 & 0.776 & 4.860 & 4.786 & 9.488 & 9.494 \\\\\n",
-      "\\textbf{Stable Diffusion 3 (fp16)} & 0.019 & 0.021 & 0.017 & 0.017 & 4.000 & 4.000 & 20.880 & 19.879 & 0.840 & 0.841 & 8.325 & 7.845 & 13.846 & 13.383 \\\\\n",
-      "\\textbf{Stable Diffusion 3 (nf4)} & 0.192 & 0.173 & 0.020 & 0.020 & 0.454 & 0.462 & 17.051 & 17.010 & 0.716 & 0.727 & 3.082 & 3.091 & 7.228 & 7.259 \\\\\n",
-      "\\textbf{WaLLoC} & 0.066 & 0.066 & 0.013 & 0.012 & 1.146 & 1.157 & 29.676 & 29.820 & 0.978 & 0.981 & 7.638 & 7.683 & 15.032 & 15.081 \\\\\n",
+      "\\textbf{0} & WEBP & 1 & 0.055 & 0.00045 & 0.591 & 28.2 & 0.96 & 5.94 & 13.1 \\\\\n",
+      "\\textbf{1} & Cheng2020 & 4 & 4.66 & 9.53 & 1.1 & 33.8 & 0.99 & 8.82 & 16.9 \\\\\n",
+      "\\textbf{2} & WaLLoC & 4 & 0.0961 & 2.83 & 2.81 & 33.5 & 0.99 & 11.2 & 19.3 \\\\\n",
+      "\\textbf{3} & Stable Diffusion 3 & 12 & 6.26 & 11.9 & 4 & 20.9 & 0.84 & 8.33 & 13.8 \\\\\n",
+      "\\textbf{4} & WaLLoC & 16 & 0.0594 & 2.85 & 0.682 & 27.5 & 0.97 & 6.51 & 13.9 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -141,11 +133,11 @@
     }
    ],
    "source": [
-    "df_rounded = df.round(3)\n",
+    "df_rounded = df.round(10)\n",
     "column_format = 'l' + 'rr' * len(metrics)\n",
     "latex_table = df_rounded.to_latex(\n",
     "    index=True,\n",
-    "    float_format=\"%.3f\",\n",
+    "    float_format=\"%.3g\",\n",
     "    column_format=column_format,\n",
     "    multicolumn=True,\n",
     "    multicolumn_format='c',\n",
@@ -153,14 +145,6 @@
     ")\n",
     "print(latex_table)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dc6a544-0254-4347-b579-5f83838bd9f0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
