--- a/RD/rd_table.ipynb
+++ b/RD/rd_table.ipynb
@@ -42,43 +42,40 @@
     "    'WaLLoC',\n",
     "    'Stable Diffusion 3',\n",
     "    'WaLLoC',\n",
-    "]"
+    "]\n",
+    "\n",
+    "metrics = [\n",
+    "    'PSNR',\n",
+    "    'MSSIM',\n",
+    "    'LPIPS_dB',\n",
+    "    'DISTS_dB',\n",
+    "]\n",
+    "\n",
+    "columns = [\n",
+    "    'Name',\n",
+    "    'Dimensionality Reduction',\n",
+    "    'Compression Ratio',\n",
+    "    'Encode',\n",
+    "    'Decode',\n",
+    "] + metrics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "adca3947-12a1-4278-86f4-091af6da9085",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics = [\n",
-    "    'cpu_encode_time',\n",
-    "    'cpu_decode_time',\n",
-    "    'bpp',\n",
-    "    'PSNR',\n",
-    "    'MSSIM',\n",
-    "    'LPIPS_dB',\n",
-    "    'DISTS_dB'\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "17273f0d-a1e7-42f4-b395-89ce55bce35f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "| Name               |   Dimensionality Reduction |   cpu_encode_time |   cpu_decode_time |    bpp |    PSNR |   MSSIM |   LPIPS_dB |   DISTS_dB |\n",
-       "|:-------------------|---------------------------:|------------------:|------------------:|-------:|--------:|--------:|-----------:|-----------:|\n",
-       "| WEBP               |                          1 |            0.055  |            0.0005 | 0.5907 | 28.2272 |  0.9597 |     5.9426 |    13.1392 |\n",
-       "| Cheng2020          |                          4 |            4.6603 |            9.5279 | 1.1033 | 33.7758 |  0.9903 |     8.8248 |    16.9385 |\n",
-       "| WaLLoC             |                          4 |            0.0961 |            2.829  | 2.8132 | 33.5474 |  0.9902 |    11.2465 |    19.2875 |\n",
-       "| Stable Diffusion 3 |                         12 |            6.2625 |           11.8983 | 4      | 20.8806 |  0.8399 |     8.3253 |    13.8466 |\n",
-       "| WaLLoC             |                         16 |            0.0594 |            2.8477 | 0.682  | 27.4524 |  0.97   |     6.5131 |    13.8514 |"
+       "| Name               |   Dimensionality Reduction |   Compression Ratio |   Encode |    Decode |    PSNR |   MSSIM |   LPIPS_dB |   DISTS_dB |\n",
+       "|:-------------------|---------------------------:|--------------------:|---------:|----------:|--------:|--------:|-----------:|-----------:|\n",
+       "| WEBP               |                          1 |             40.6318 |  22.1209 | 2746.8    | 28.2272 |  0.9597 |     5.9426 |    13.1392 |\n",
+       "| Cheng2020          |                          4 |             21.7528 |   0.289  |    0.1395 | 33.7758 |  0.9903 |     8.8248 |    16.9385 |\n",
+       "| WaLLoC             |                          4 |              8.5313 |  13.9753 |    0.47   | 33.5474 |  0.9902 |    11.2465 |    19.2875 |\n",
+       "| Stable Diffusion 3 |                         12 |              6      |   0.1949 |    0.1013 | 20.8806 |  0.8399 |     8.3253 |    13.8466 |\n",
+       "| WaLLoC             |                         16 |             35.1925 |  22.0586 |    0.4657 | 27.4524 |  0.97   |     6.5131 |    13.8514 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -89,12 +86,16 @@
     }
    ],
    "source": [
-    "columns = ['Name', 'Dimensionality Reduction'] + metrics\n",
     "data_rows = []\n",
-    "\n",
     "for i_method, method in enumerate(methods):\n",
     "    ds = load_dataset(method, split='validation')\n",
     "    row = [names[i_method], dimensionality_reduction[i_method]]\n",
+    "    compression_ratio = 24 / np.mean(ds['bpp'])\n",
+    "    encode_MP_per_second = np.mean(np.array(ds['n_pixels'])/np.array(ds['cpu_encode_time'])/1e6)\n",
+    "    decode_MP_per_second = np.mean(np.array(ds['n_pixels'])/np.array(ds['cpu_decode_time'])/1e6)\n",
+    "    row.append(compression_ratio)\n",
+    "    row.append(encode_MP_per_second)\n",
+    "    row.append(decode_MP_per_second)\n",
     "    for metric in metrics:\n",
     "        mean = np.mean(ds[metric])\n",
     "        row.append(mean)\n",
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "1d6426e8-6844-4b48-a7a2-6ff183f779be",
    "metadata": {},
    "outputs": [
@@ -117,15 +118,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lrrrrrrrrrrrrrr}\n",
+      "\\begin{tabular}{lrrrrrrrr}\n",
       "\\toprule\n",
-      " & Name & Dimensionality Reduction & cpu_encode_time & cpu_decode_time & bpp & PSNR & MSSIM & LPIPS_dB & DISTS_dB \\\\\n",
+      " & Name & Dimensionality Reduction & Compression Ratio & Encode & Decode & PSNR & MSSIM & LPIPS_dB & DISTS_dB \\\\\n",
       "\\midrule\n",
-      "\\textbf{0} & WEBP & 1 & 0.055 & 0.00045 & 0.591 & 28.2 & 0.96 & 5.94 & 13.1 \\\\\n",
-      "\\textbf{1} & Cheng2020 & 4 & 4.66 & 9.53 & 1.1 & 33.8 & 0.99 & 8.82 & 16.9 \\\\\n",
-      "\\textbf{2} & WaLLoC & 4 & 0.0961 & 2.83 & 2.81 & 33.5 & 0.99 & 11.2 & 19.3 \\\\\n",
-      "\\textbf{3} & Stable Diffusion 3 & 12 & 6.26 & 11.9 & 4 & 20.9 & 0.84 & 8.33 & 13.8 \\\\\n",
-      "\\textbf{4} & WaLLoC & 16 & 0.0594 & 2.85 & 0.682 & 27.5 & 0.97 & 6.51 & 13.9 \\\\\n",
+      "\\textbf{0} & WEBP & 1 & 40.6 & 22.1 & 2.75e+03 & 28.2 & 0.96 & 5.94 & 13.1 \\\\\n",
+      "\\textbf{1} & Cheng2020 & 4 & 21.8 & 0.289 & 0.139 & 33.8 & 0.99 & 8.82 & 16.9 \\\\\n",
+      "\\textbf{2} & WaLLoC & 4 & 8.53 & 14 & 0.47 & 33.5 & 0.99 & 11.2 & 19.3 \\\\\n",
+      "\\textbf{3} & Stable Diffusion 3 & 12 & 6 & 0.195 & 0.101 & 20.9 & 0.84 & 8.33 & 13.8 \\\\\n",
+      "\\textbf{4} & WaLLoC & 16 & 35.2 & 22.1 & 0.466 & 27.5 & 0.97 & 6.51 & 13.9 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
